--- a/www/pages/friends/friends.html
+++ b/www/pages/friends/friends.html
@@ -15,7 +15,7 @@
   <ion-content padding="true" class="has-header">
 
 <!--Connection Request-->
-    <div>
+    <!-- <div>
          <div class="card">
              <div class="item item-image">
                 <img src="img/jonny_depp.jpg">
@@ -26,12 +26,12 @@
               <a class="button button-icon icon ion-checkmark-circled" style="color:#22c064;"></a>
               <a class="button button-icon icon ion-close-circled" style="color:#22c064"></a>
          </div>
-    </div>
+    </div> -->
 <!--./connection request-->
 
 
 <!--Suggested User-->
-    <!-- <a href="" style="text-decoration:none">
+    <a href="" style="text-decoration:none">
          <div class="row">
 
              <div style="padding-left:5px">
@@ -43,21 +43,48 @@
 
              <div class="col">
                  <div>
-                   <p class="item item-borderless item-text-wrap narrow-padding" style="margin-top:-5px;padding-bottom:-10px; background-color:transparent">
+                   <p class="item item-borderless item-text-wrap narrow-padding name-style">
                      <span class="notification-profile-name">Saeef Minhaz Shovon</span>
-
                    </p>
 
-                   <div class="button-bar" style="padding:0">
-                     <button class="button button-outline button-positive button-small" style="border-radius:20px; font-size:10px;margin-right:5px">Connect</button>
-                     <button class="button button-outline button-positive button-small" style="border-radius:20px; font-size:10px; margin-left:5px">Message</button>
+                   <div class="button-bar">
+                     <button class="button button-outline button-positive button-thin btn-style">Connect</button>
+                     <button class="button button-outline button-positive button-thin btn-style">Message</button>
                    </div>
 
                  </div>
              </div>
          </div>
-     </a> -->
+     </a>
 <!--./Suggested user-->
+
+<!--Connection Request-->
+    <a href="" style="text-decoration:none">
+         <div class="row">
+
+             <div style="padding-left:5px">
+               <div class="profile_image" style="background-image: url(img/shovon_pp.jpg)">
+                  <div class="pp-top"></div>
+                  <div class="pp-Bottom"></div>
+               </div>
+             </div>
+
+             <div class="col">
+                 <div>
+                   <p class="item item-borderless item-text-wrap narrow-padding name-style">
+                     <span class="notification-profile-name">Saeef Minhaz Shovon</span>
+                   </p>
+
+                   <div class="button-bar">
+                     <button class="button button-outline button-balanced button-thin btn-style">Add</button>
+                     <button class="button button-outline button-assertive button-thin btn-style">Cancel</button>
+                   </div>
+
+                 </div>
+             </div>
+         </div>
+     </a>
+<!--./Connection request-->
 
 
   </ion-content>
